[package]
name = "arb_engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "arb_engine"
path = "src/main.rs"

[dependencies]

# Error handling
anyhow = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client (subgraph + RPC)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Ethereum interaction
ethers = { version = "2", features = ["ws", "rustls"] }

# Flashbots
ethers-flashbots = { git = "https://github.com/onbjerg/ethers-flashbots" }

# Graph + algorithms
petgraph = "0.6"

# EVM simulation
revm = { version = "9", features = ["ethersdb"] }

# Concurrency helpers
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Utilities
url = "2"
hex = "0.4"