[package]
name = "arb_engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "arb_engine"
path = "src/main.rs"

[dependencies]

# Error handling
anyhow = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client (subgraph + RPC)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Ethereum interaction — alloy replaces ethers
alloy = { version = "1.1", features = ["full", "sol-types", "contract", "signer-local", "consensus", "network"] }

# Uniswap v4 SDK — provides PoolManagerLens (get_slot0, get_liquidity)
uniswap-v4-sdk = { version = "1.1", features = ["extensions"] }

# Graph + algorithms
petgraph = "0.6"

# EVM simulation
revm = { version = "3.5", features = ["ethersdb"] }

# Concurrency helpers
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Utilities
hex = "0.4"